objects/Source_And_Uses__c.object
<CustomObject>
    <description>Capturing the Source and Use of Funds related to the transaction</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>The description of what the payment is for.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Any applicable Notes for this transaction.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>The opportunity associated with this fund request.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Funds_Flows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <inlineHelpText>What kind of method is the property owner using to pay this money?</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Promised_Backup__c</fullName>
        <inlineHelpText>This is a link to an attached document to this opportunity that contains the backup documentation.  This could be an email or a voicemail attachment.</inlineHelpText>
        <label>Payment Promised Backup</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_Promised_Date__c</fullName>
        <inlineHelpText>This is the date the property owner said &quot;the check is in the mail&quot;</inlineHelpText>
        <label>Payment Promised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Promised__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you have received confirmation from the property owner that the &quot;check is in the mail&quot;.</inlineHelpText>
        <label>Payment Promised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Received_Date__c</fullName>
        <inlineHelpText>When was the payment received.</inlineHelpText>
        <label>Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <inlineHelpText>What was the amount of the payment received.</inlineHelpText>
        <label>Payment  Received Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <inlineHelpText>This is the total amount expected.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <inlineHelpText>When was the request made to the property owner?</inlineHelpText>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <label>Sources and Uses</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source and Uses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>